--- a/WatchList/app/src/main/res/layout/activity_main2.xml
+++ b/WatchList/app/src/main/res/layout/activity_main2.xml
@@ -14,5 +14,16 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="209dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="372dp"
+        android:layout_height="33dp"
+        android:outlineProvider="bounds"
+        app:searchHintIcon="@android:color/black"
+        app:searchIcon="@android:color/black"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="5dp" />
 </android.support.constraint.ConstraintLayout>
