--- a/WatchList/app/src/main/res/layout/activity_base.xml
+++ b/WatchList/app/src/main/res/layout/activity_base.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a11502064.watchlist.BaseActivity">
+    tools:context="com.example.a11502064.watchlist.activities.BaseActivity">
 
 </android.support.constraint.ConstraintLayout>
