--- a/WatchList/app/src/main/res/layout/activity_main3.xml
+++ b/WatchList/app/src/main/res/layout/activity_main3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a11502064.watchlist.Main3Activity">
+    tools:context="com.example.a11502064.watchlist.activities.Main3Activity">
 
     <SearchView
         android:id="@+id/searchView"
