--- a/Watchlist/app/src/main/res/menu/toolbar_menu.xml
+++ b/Watchlist/app/src/main/res/menu/toolbar_menu.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.MainActivity">
 
-    <item android:id="@+id/filterSpinner"
+    <item android:id="@+id/filterSpinnerItem"
         android:title=""
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         app:actionViewClass="android.widget.Spinner">
     </item>
 
@@ -15,6 +15,12 @@
         android:id="@+id/homeMenuItem"
         android:title="@string/homeMenuItemText"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/searchListMenuItem"
+        android:title="@string/searchListMenuItemText"
+        app:showAsAction="never"/>
+
     <item
         android:id="@+id/watchListMenuItem"
         android:title="@string/watchListMenuItemText"
