--- a/WatchList/app/src/main/res/layout/activity_watched_list.xml
+++ b/WatchList/app/src/main/res/layout/activity_watched_list.xml
@@ -6,24 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activities.WatchedListActivity">
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="372dp"
-        android:layout_height="33dp"
-        android:outlineProvider="bounds"
-        app:searchHintIcon="@android:color/black"
-        app:searchIcon="@android:color/black"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="5dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="99dp"
-        android:layout_height="62dp"
-        android:text="Watched"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="143dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+    <ListView
+        android:id="@+id/watchedListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 </android.support.constraint.ConstraintLayout>
