--- a/WatchList/app/src/main/res/values/colors.xml
+++ b/WatchList/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#393939</color>
     <color name="colorAccent">#FF4081</color>
     <color name="star">#FFFF00</color>
-    <color name="textColor">#FFFFFF</color>
+    <color name="textColorLight">#FFFFFF</color>
+    <color name="textColorNormal">#C0C0C0</color>
 </resources>
