--- a/Watchlist/app/src/main/res/layout-land/activity_main.xml
+++ b/Watchlist/app/src/main/res/layout-land/activity_main.xml
@@ -3,11 +3,33 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridView
-        android:id="@+id/moviePostersGridView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="5">
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <GridView
+            android:id="@+id/moviePostersGridView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:numColumns="3"
+            android:layout_weight="0.5">
 
-    </GridView>
+        </GridView>
+
+        <FrameLayout
+            android:id="@+id/movieDetailsContainer"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"/>
+
+        <TextView
+            android:id="@+id/noInternetTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/noInternetText"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+    </LinearLayout>
+
 </LinearLayout>
