--- a/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.MovieDetailsActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -129,13 +126,23 @@
                 android:layout_toRightOf="@id/movieRatingTextView"
                 android:textColor="@color/textColorLight"/>
 
+            <Button
+                android:id="@+id/addToWatchListButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/movieRatingLabelTextView"
+                android:layout_alignParentLeft="true"
+                android:text="@string/addToWatchListButtonText"
+                android:layout_marginBottom="-7dp"/>
+
             <TextView
                 android:id="@+id/movieDescriptionLabelTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/descriptionLabelText"
                 android:textColor="@color/textColorLight"
-                android:layout_below="@id/moviePosterImageView"
+                android:layout_below="@id/addToWatchListButton"
                 android:textSize="20sp"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"/>
@@ -150,31 +157,18 @@
                 android:paddingRight="7dp"
                 android:layout_marginBottom="5dp"/>
 
-            <Button
-                android:id="@+id/addToWatchListButton"
+            <!--<fragment-->
+            <!--android:id="@+id/castFragment"-->
+            <!--android:name="pxl.be.watchlist.fragments.CastFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/moviePosterImageView"/>-->
+
+            <FrameLayout
+                android:id="@+id/youtubeFragmentContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/moviePosterImageView"
-                android:layout_alignParentRight="true"
-                android:layout_alignBottom="@+id/moviePosterImageView"
-                android:text="@string/addToWatchListButtonText"
-                android:layout_marginBottom="-7dp"/>
-
-           <!--<fragment-->
-               <!--android:id="@+id/castFragment"-->
-               <!--android:name="pxl.be.watchlist.fragments.CastFragment"-->
-               <!--android:layout_width="match_parent"-->
-               <!--android:layout_height="wrap_content"-->
-               <!--android:layout_below="@id/moviePosterImageView"/>-->
-
-            <fragment
-                android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
-                android:id="@+id/youtube_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/movieDescriptionTextView"/>
-
+                android:layout_below="@+id/movieDescriptionTextView"/>
         </RelativeLayout>
     </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
