--- a/Watchlist/app/src/main/res/layout/spinner_item_layout.xml
+++ b/Watchlist/app/src/main/res/layout/spinner_item_layout.xml
@@ -8,5 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="16dp"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        android:textColor="@color/textColorNormal"/>
 </LinearLayout>
