--- a/WatchList/app/src/main/res/layout/activity_watch_list.xml
+++ b/WatchList/app/src/main/res/layout/activity_watch_list.xml
@@ -12,8 +12,7 @@
         <ListView
             android:id="@+id/watchListListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
+            android:layout_height="wrap_content"/>
 
         <TextView android:id="@+id/emptyWatchListTextView"
             android:layout_width="wrap_content"
