--- a/WatchList/app/src/main/res/layout/activity_movie_details.xml
+++ b/WatchList/app/src/main/res/layout/activity_movie_details.xml
@@ -14,9 +14,10 @@
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/moviePosterImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="7dp"/>
+                android:layout_alignParentLeft="true"
+                android:layout_width="160dp"
+                android:layout_height="230dp"
+                android:layout_margin="5dp"/>
             <TextView
                 android:id="@+id/movieTitleTextView"
                 android:layout_width="wrap_content"
@@ -24,8 +25,8 @@
                 android:layout_toRightOf="@id/moviePosterImageView"
                 android:layout_alignTop="@id/moviePosterImageView"
                 android:textSize="22sp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
                 android:paddingRight="4dp"
                 android:textColor="@color/textColorLight"/>
 
@@ -36,7 +37,6 @@
                 android:text="@string/movieGenreLabelText"
                 android:layout_below="@id/movieTitleTextView"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:paddingLeft="4dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
             <TextView
@@ -52,9 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/movieDurationLabelText"
-                android:layout_below="@id/movieGenreLabelTextView"
+                android:layout_below="@id/movieGenreTextView"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:paddingLeft="4dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
             <TextView
@@ -70,9 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/movieReleaseDateLabelText"
-                android:layout_below="@id/movieDurationLabelTextView"
+                android:layout_below="@id/movieDurationTextView"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:paddingLeft="4dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
             <TextView
@@ -89,8 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/movieLanguageLabelText"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:layout_below="@id/movieReleaseDateLabelTextView"
-                android:paddingLeft="4dp"
+                android:layout_below="@id/movieReleaseDateTextView"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
 
@@ -108,8 +105,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/movieRatingLabelText"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:layout_below="@id/movieLanguageLabelTextView"
-                android:paddingLeft="4dp"
+                android:layout_below="@id/movieLanguageTextView"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
 
@@ -129,13 +125,22 @@
                 android:layout_toRightOf="@id/movieRatingTextView"
                 android:textColor="@color/textColorLight"/>
 
+            <Button
+                android:id="@+id/addToWatchListButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/moviePosterImageView"
+                android:text="@string/addToWatchListButtonText"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
+
             <TextView
                 android:id="@+id/movieDescriptionLabelTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/descriptionLabelText"
                 android:textColor="@color/textColorLight"
-                android:layout_below="@id/moviePosterImageView"
+                android:layout_below="@id/addToWatchListButton"
                 android:textSize="20sp"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"/>
@@ -149,16 +154,6 @@
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:layout_marginBottom="5dp"/>
-
-            <Button
-                android:id="@+id/addToWatchListButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/moviePosterImageView"
-                android:layout_alignParentRight="true"
-                android:layout_alignBottom="@+id/moviePosterImageView"
-                android:text="@string/addToWatchListButtonText"
-                android:layout_marginBottom="-7dp"/>
 
            <!--<fragment-->
                <!--android:id="@+id/castFragment"-->
