--- a/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -21,9 +21,9 @@
                 android:layout_toRightOf="@id/moviePosterImageView"
                 android:layout_alignTop="@id/moviePosterImageView"
                 android:textSize="22sp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:paddingRight="4dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingLeft="4dp"
                 android:textColor="@color/textColorLight"/>
 
             <TextView
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/movieDurationLabelText"
-                android:layout_below="@id/movieGenreLabelTextView"
+                android:layout_below="@id/movieGenreTextView"
                 android:layout_toRightOf="@id/moviePosterImageView"
                 android:paddingLeft="4dp"
                 android:paddingTop="10dp"
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/movieReleaseDateLabelText"
-                android:layout_below="@id/movieDurationLabelTextView"
+                android:layout_below="@id/movieDurationTextView"
                 android:layout_toRightOf="@id/moviePosterImageView"
                 android:paddingLeft="4dp"
                 android:paddingTop="10dp"
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/movieLanguageLabelText"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:layout_below="@id/movieReleaseDateLabelTextView"
+                android:layout_below="@id/movieReleaseDateTextView"
                 android:paddingLeft="4dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/movieRatingLabelText"
                 android:layout_toRightOf="@id/moviePosterImageView"
-                android:layout_below="@id/movieLanguageLabelTextView"
+                android:layout_below="@id/movieLanguageTextView"
                 android:paddingLeft="4dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/textColorLight"/>
@@ -133,8 +133,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/movieRatingLabelTextView"
                 android:layout_alignParentLeft="true"
-                android:text="@string/addToWatchListButtonText"
-                android:layout_marginBottom="-7dp"/>
+                android:text="@string/addToWatchListButtonText" />
 
             <TextView
                 android:id="@+id/movieDescriptionLabelTextView"
