--- a/Watchlist/app/src/main/res/layout-land/activity_main.xml
+++ b/Watchlist/app/src/main/res/layout-land/activity_main.xml
@@ -13,9 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:numColumns="3"
-            android:layout_weight="0.5">
-
-        </GridView>
+            android:layout_weight="0.5"/>
 
         <FrameLayout
             android:id="@+id/movieDetailsContainer"
