--- a/Watchlist/app/src/main/res/layout/activity_main.xml
+++ b/Watchlist/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,7 @@
             android:id="@+id/moviePostersGridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="3">
-
-        </GridView>
+            android:numColumns="3"/>
 
         <TextView
             android:id="@+id/noInternetTextView"
@@ -30,4 +28,5 @@
             android:layout_width="0dp"
             android:layout_height="0dp"/>
     </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
