--- a/Watchlist/app/src/main/res/layout/cast_fragment_layout.xml
+++ b/Watchlist/app/src/main/res/layout/cast_fragment_layout.xml
@@ -6,8 +6,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/castRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/moviePosterImageView">
-
+        android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
