--- a/WatchList/app/src/main/res/layout/activity_movie_details.xml
+++ b/WatchList/app/src/main/res/layout/activity_movie_details.xml
@@ -159,7 +159,7 @@
                 android:id="@+id/youtube_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_below="@id/movieDescriptionTextView"/>
 
         </RelativeLayout>
