--- a/Watchlist/app/src/main/res/layout-land/activity_main.xml
+++ b/Watchlist/app/src/main/res/layout-land/activity_main.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <GridView
+        android:id="@+id/moviePostersGridView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:numColumns="3"
+        android:background="@color/colorPrimary"/>
+
+    <FrameLayout
+        android:id="@+id/movieDetailsContainer"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="1">
-        <GridView
-            android:id="@+id/moviePostersGridView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:layout_weight="0.5"/>
+        android:layout_weight="0.5"
+        android:background="@color/colorPrimary">
 
-        <FrameLayout
-            android:id="@+id/movieDetailsContainer"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/noInternetTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/noInternetText"
-            android:visibility="gone"
-            android:layout_centerInParent="true"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/noDetailsSelectedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/noDetailsSelectedText"
+                android:visibility="gone"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/noInternetTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/noInternetText"
+        android:visibility="gone" />
 
 </LinearLayout>
