--- a/Watchlist/app/src/main/res/layout/activity_main.xml
+++ b/Watchlist/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
             android:id="@+id/moviePostersGridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="3"/>
+            android:numColumns="3"
+            android:background="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/noInternetTextView"
