--- a/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
+++ b/Watchlist/app/src/main/res/layout/movie_details_fragment_layout.xml
@@ -167,7 +167,8 @@
                 android:id="@+id/youtubeFragmentContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/movieDescriptionTextView"/>
+                android:layout_below="@+id/movieDescriptionTextView"
+                android:layout_margin="5dp"/>
         </RelativeLayout>
     </ScrollView>
 
